--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   sqflite: ^2.3.0
   provider: ^6.1.1
   excel: ^4.0.0
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
